--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -13,6 +13,7 @@
 
     &__description {
         padding: 20px 50px;
+        text-align: center;
     }
 }
 
@@ -35,6 +36,19 @@
     background-color: getColor('third');
     display: flex;
     flex-direction: column;
-    // justify-content: center;
     align-items: center;
+}
+
+
+// test pictures
+.boxes {
+    max-width: 700px;
+    max-height: 600px;
+}
+
+.beer__image, .snacks__image {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    padding: 5px;
 }
